feat(Admin):Added admin session

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,13 @@ DATABASE_URL="mysql://poker:poker123@localhost:3306/poker_db"
 # Auth - Generate a secure random string for production
 JWT_SECRET="your-super-secret-jwt-key-change-in-production"
 
+# Admin Panel
+# Username for admin access
+ADMIN_USERNAME="chefe"
+# Password hash (bcrypt) - Generate with: node -e "require('bcryptjs').hash('YourPassword', 12).then(console.log)"
+ADMIN_PASSWORD_HASH="$2a$12$cFVzghARlxuZy8Mb0qBhAOz0/v70Y7YKdtQtJs7nLVOD4KAclJxdy"
+# Separate JWT secret for admin tokens
+ADMIN_JWT_SECRET="admin-jwt-secret-change-in-production"
+
 # App
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
