feat(Mobile): Added hamburguer menu for mobile users

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,9 @@ JWT_SECRET="your-super-secret-jwt-key-change-in-production"
 
 # Admin Panel
 # Username for admin access
-ADMIN_USERNAME="chefe"
+ADMIN_USERNAME="admin"
 # Password hash (bcrypt) - Generate with: node -e "require('bcryptjs').hash('YourPassword', 12).then(console.log)"
-ADMIN_PASSWORD_HASH="$2a$12$cFVzghARlxuZy8Mb0qBhAOz0/v70Y7YKdtQtJs7nLVOD4KAclJxdy"
+ADMIN_PASSWORD_HASH="your-bcrypt-hash-here"
 # Separate JWT secret for admin tokens
 ADMIN_JWT_SECRET="admin-jwt-secret-change-in-production"
 
