feat(Groups): Add invite link to groups

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -7,7 +7,7 @@ services:
       branch: main
       deploy_on_push: true
     build_command: npm install && npx prisma generate && npm run build
-    run_command: npx prisma db push --skip-generate && npm start
+    run_command: npx prisma db push --skip-generate --accept-data-loss && npm start
     environment_slug: node-js
     instance_count: 1
     instance_size_slug: apps-s-1vcpu-0.5gb
